# pm2dev

./: .gitignore
ideation-new-oss-repos/: Mac OS apps Research 01.md  (+4 more)
ideation-parseltongue/docs-202602/prep-v256/rustc-tools/rustc_codegen_jvm/: .gitignore  Cargo.toml  CompareSize.py  Investigate.py  LICENSE-Apache  Readme.md  Tester.py  build.py  config.toml.template  jvm-unknown-unknown.json.template
ideation-parseltongue/docs-202602/prep-v256/rustc-tools/rustc_codegen_jvm/.github/workflows/: ci.yml
ideation-parseltongue/docs-202602/prep-v256/rustc-tools/rustc_codegen_jvm/java-linker/: Cargo.toml
ideation-parseltongue/docs-202602/prep-v256/rustc-tools/rustc_codegen_jvm/java-linker/src/: main.rs
ideation-parseltongue/docs-202602/prep-v256/rustc-tools/rustc_codegen_jvm/proguard/: default.pro
ideation-parseltongue/docs-202602/prep-v256/rustc-tools/rustc_codegen_jvm/shim-metadata-gen/: Cargo.toml  core.json
ideation-parseltongue/docs-202602/prep-v256/rustc-tools/rustc_codegen_jvm/shim-metadata-gen/src/: main.rs
ideation-parseltongue/docs-202602/prep-v256/rustc-tools/rustc_codegen_jvm/src/: lib.rs  lower1.rs  lower2.rs  misc.rs  oomir.rs  optimise1.rs
ideation-parseltongue/docs-202602/prep-v256/rustc-tools/rustc_codegen_jvm/src/lower1/: closures.rs  control_flow.rs  naming.rs  operand.rs  place.rs  types.rs
ideation-parseltongue/docs-202602/prep-v256/rustc-tools/rustc_codegen_jvm/src/lower2/: consts.rs  helpers.rs  jvm_gen.rs  shim.rs  translator.rs
ideation-parseltongue/docs-202602/prep-v256/rustc-tools/rustc_codegen_jvm/src/oomir/: interpret.rs
(+189 files in other folders)
